test/files/neg/t7473.check
t7473.scala:6: error: '<-' expected but '=' found.
  (for (x = Some(i); if x == j) yield 42) toList
          ^
t7473.scala:6: error: illegal start of simple expression
  (for (x = Some(i); if x == j) yield 42) toList
                   ^
two errors found
